<?xml version="1.0" encoding="utf-8"?>
<!-- 巡检任务 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_blue"
    android:orientation="vertical" >

    <include layout="@layout/header_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layout_height"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp" >

        <LinearLayout
            android:id="@+id/routing_wait_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round_white"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/routing_task_wait_imageview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/routing_task_wait_icon_blue" />

            <TextView
                android:id="@+id/routing_task_wait_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_routing_wait"
                android:textColor="@color/main_blue"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/routing_complete_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/routing_task_complete_imageview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/routing_task_complete_icon_white" />

            <TextView
                android:id="@+id/routing_task_complete_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_routing_complete"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/routing_outofdate_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/routing_task_outofdate_imageview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/routing_task_outofdate_icon_white" />

            <TextView
                android:id="@+id/routing_task_outofdate_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_routing_outofdate"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round_white" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal" >

                <!-- 名称 -->

                <TextView
                    android:id="@+id/table_head_name"
                    android:layout_width="110dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_name"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
                <!-- 开始 -->

                <TextView
                    android:id="@+id/table_head_begin"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_begin"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
                <!-- 结束 -->

                <TextView
                    android:id="@+id/table_head_end"
                    android:layout_width="100dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_end"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="0.5px"
                    android:layout_height="wrap_content"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
                <!-- 巡检点 -->

                <TextView
                    android:id="@+id/table_head_pointnum"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_routingpoint"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line4"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
                <!-- 已巡检 -->

                <TextView
                    android:id="@+id/table_head_hasrouted"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_routed"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line5"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
                <!-- 状态 -->

                <TextView
                    android:id="@+id/table_head_state"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_state"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line6"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />

                <!-- 操作 -->
                <TextView
                    android:id="@+id/table_head_operate"
                    android:layout_width="80dp"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/task_table_operate"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/line7"
                    android:layout_width="0.5px"
                    android:layout_height="fill_parent"
                    android:background="#B8B8B8"
                    android:visibility="visible" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5px"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <ListView
                android:id="@+id/task_listview"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/main_gray"
                android:dividerHeight="0.5px"
                android:fadeScrollbars="true"
                android:fastScrollEnabled="true" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>