<?xml version="1.0" encoding="utf-8"?>
<!-- 数据 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/header_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/touxiang" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_label_xunjianyuan"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="某某"
                    android:textColor="@color/label_text_color_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_label_logindate"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/last_login_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2016-01-01 15:00"
                    android:textColor="@color/label_text_color_blue"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_label_logintimes"
                    android:textColor="@color/label_text_color_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1次"
                    android:textColor="@color/label_text_color_blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signout_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/red_round_selector"
        android:padding="10dp"
        android:text="@string/button_quit"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal" />

</LinearLayout>